# aoc-rs

./: Cargo.toml  flake.nix
advent-common/: Cargo.toml
advent-common/src/: lib.rs
advent1/: Cargo.toml
advent1/src/: main.rs
advent2/: Cargo.toml
advent2/src/: main.rs
advent3/: Cargo.toml  README.md  input.txt
advent3/src/: main.rs
advent4/: Cargo.toml
advent4/src/: main.rs
advent5/: Cargo.toml  input.txt
advent5/src/: main.rs
advent6/: Cargo.toml  input.txt  input_test.txt
advent6/src/: main.rs
advent7/: Cargo.toml  README.md  input.txt
advent7/src/: main.rs
advent8/: Cargo.toml  README.md
advent8/src/: main.rs
