[package]
name = "advent-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
